tested assembly report

--- a/atlas/report/template_assembly_report.html
+++ b/atlas/report/template_assembly_report.html
@@ -21,7 +21,7 @@
 
         <h2>Total assembly length</h2>
 
-            {div['Total']}
+            {div[Total]}
 
 
         <h2>Fragmentation<h/2>
@@ -36,11 +36,11 @@
         <div class="float-container">
 
           <div class="float-child">
-            {div['N50']}
+            {div[N50]}
           </div>
 
           <div class="float-child">
-            {div['N90']}
+            {div[N90]}
           </div>
 
         </div>
@@ -50,11 +50,11 @@
         <div class="float-container">
 
           <div class="float-child">
-            {div['N_Predicted_Genes']}
+            {div[N_Predicted_Genes]}
           </div>
 
           <div class="float-child">
-            {div['Percent_Assembled_Reads']}
+            {div[Percent_Assembled_Reads]}
           </div>
 
         </div>
