--- a/atlas/report/template_QC_report.html
+++ b/atlas/report/template_QC_report.html
@@ -19,20 +19,66 @@
         <h1>Quality Control Report</h1>
 
 
-        <h2>Total assembly length</h2>
+        <h2>Number of reads troughout th quality control process</h2>
 
-            {div['Total']}
-
-
-        <h2>Read quality after QC<h/2>
-
-          {div['quality_QC']}
-
-        <h2>Quality of initial reads<h/2>
-
-          {div['quality_raw']}
+            {div[Reads]}
 
 
+            <table border="1" class="docutils">
+            <colgroup>
+            <col width="26%" />
+            <col width="74%" />
+            </colgroup>
+            <thead valign="bottom">
+            <tr><th class="head">Step</th>
+            <th class="head">Output</th>
+            </tr>
+            </thead>
+            <tbody valign="top">
+            <tr><td>raw</td>
+            <td>the input reads</td>
+            </tr>
+            <tr><td>deduplicated</td>
+            <td>after (optional) deduplication step</td>
+            </tr>
+            <tr><td>filtered</td>
+            <td>trimmed, quality filtered</td>
+            </tr>
+            <tr><td>qc</td>
+            <td>final reads, contaminants removed</td>
+            </tr>
+            </tbody>
+            </table>
+            </div>
+
+        <h2>Total number of reads/bases ater the QC<h/2>
+
+          <div class="float-container">
+
+            <div class="float-child">
+              {div[Total_Reads]}
+            </div>
+
+            <div class="float-child">
+              {div[Total_Bases]}
+            </div>
+
+          </div>
+
+
+          <h2>Quality values along the read<h/2>
+
+            {div[quality_QC]}
+
+          <h2>Read length<h/2>
+
+
+            {div[Length]}
+
+          <h2>Insert size<h/2>
+            <p> The size of the reads + the space between. Ideally the paired-end reads don't overlap. </p>
+
+            {div[Insert]}
 
             </div>
     </body>
