bin report draft

--- a/atlas/report/template_assembly_report.html
+++ b/atlas/report/template_assembly_report.html
@@ -1,7 +1,7 @@
 <html>
     <head>
 
-        <title>Metagenome-Atlas - Assembly Summary</title>
+        <title>Metagenome-Atlas - Assembly Report</title>
 
         <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
