--- a/atlas/workflow/report/template_bin_report.html
+++ b/atlas/workflow/report/template_bin_report.html
@@ -18,7 +18,7 @@
 
         <h1>Bin Report for Binner {binner}</h1>
 
-        <p>Genome completeness and contamination, and taxonomy were estimated unsing CheckM.</p>
+        <p>Genome completeness and contamination, and taxonomy were estimated unsing CheckM2. </p>
         <p>Bins might represent the same species assembled from different samples. During the De-replication step only the gneome with the highest quality will be selected as representative for the species/cluster.</p>
         <p>For all the information see the table '{div[input_file]}'</p>
 
