Correction of typos

--- a/workflow/report/template_bin_report.html
+++ b/workflow/report/template_bin_report.html
@@ -23,21 +23,21 @@
         {div[QualityScore]}
         <p>For all the information see the file {div[input_file]}</p>
 
-        <h2>Number of genomes<h/2></h>
+        <h2>Number of genomes</h2></h>
             {div[table]}
         
             <p>"Good quality" refers to the standard of Completeness &gt; 90&percnt; and Contamination &lt; 5&percnt;. Also called high-quality or near-complete. But t-RNA/r-RNA presence is not evaluated. It is less stingent than Quality Score &gt; 90.  </p>
 
-        <h2>Quality for all bins<h/2>
+        <h2>Quality for all bins</h2>
                 {div[2D]}
 
 
-        <h2>Quality for Species representatives<h/2>
+        <h2>Quality for Species representatives</h2>
                 {div[2Dsp]}
 
 
 
-        <h2>Quality score by Sample <h/2>
+        <h2>Quality score by Sample </h2>
 
             
 
