--- a/workflow/report/template_QC_report.html
+++ b/workflow/report/template_QC_report.html
@@ -19,7 +19,7 @@
         <h1>Quality Control Report</h1>
 
 
-        <h2>Number of reads troughout th quality control process</h2>
+        <h2>Number of reads that went through the quality control process.</h2>
 
             {div[Reads]}
 
@@ -50,7 +50,7 @@
             </tbody>
             </table>
 
-        <h2>Total number of reads/bases ater the QC<h/2>
+        <h2>Total number of reads/bases after QC</h2>
 
           <div class="float-container">
 
@@ -65,17 +65,17 @@
           </div>
 
 
-          <h2>Quality values along the read<h/2>
+          <h2>Base quality values along reads</h2>
 
             {div[quality_QC]}
 
-          <h2>Read length<h/2>
+          <h2>Read length</h2>
 
 
             {div[Length]}
 
-          <h2>Insert size<h/2>
-            <p> The size of the reads + the space between. Ideally the paired-end reads don't overlap. </p>
+          <h2>Insert size</h2>
+            <p> The size of the reads + the space between. Ideally, the paired-end reads don't overlap. </p>
 
             {div[Insert]}
 
