--- a/workflow/report/template_assembly_report.html
+++ b/workflow/report/template_assembly_report.html
@@ -24,11 +24,11 @@
             {div[Total]}
 
 
-        <h2>Fragmentation<h/2>
+        <h2>Fragmentation</h2>
 
         <p>
         N50/N90 is a measure of how fractionated assemblies are:
-        50%/ 90% of the assembly is made up of contigs of Length N50/N90-length or longer.
+        50%/90% of the assembly consists of contigs of length N50/N90 or longer.
         You need N50/N90-number contigs to get 50%/90% of the total assembly length.
         </p>
 
