Back-change heading closing tags
- https://github.com/metagenome-atlas/atlas/pull/713#issuecomment-1889512838

--- a/workflow/report/template_assembly_report.html
+++ b/workflow/report/template_assembly_report.html
@@ -24,7 +24,7 @@
             {div[Total]}
 
 
-        <h2>Fragmentation</h2>
+        <h2>Fragmentation<h/2>
 
         <p>
         N50/N90 is a measure of how fractionated assemblies are:
