--- a/workflow/report/template_QC_report.html
+++ b/workflow/report/template_QC_report.html
@@ -50,7 +50,7 @@
             </tbody>
             </table>
 
-        <h2>Total number of reads/bases after QC</h2>
+        <h2>Total number of reads/bases after QC<h/2>
 
           <div class="float-container">
 
@@ -65,16 +65,16 @@
           </div>
 
 
-          <h2>Base quality values along reads</h2>
+          <h2>Base quality values along reads<h/2>
 
             {div[quality_QC]}
 
-          <h2>Read length</h2>
+          <h2>Read length<h/2>
 
 
             {div[Length]}
 
-          <h2>Insert size</h2>
+          <h2>Insert size<h/2>
             <p> The size of the reads + the space between. Ideally, the paired-end reads don't overlap. </p>
 
             {div[Insert]}
